# eruka-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
eruka_cli/: __init__.py  chrome_token.py  cli.py  eurekaa_client.py  models.py  report.py
examples/: digital-marketing-brief.md
tests/: test_cli.py  test_client.py  test_models.py  test_report.py
